using a delay in a tween

--- a/BasicAnimation/index.html
+++ b/BasicAnimation/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <script src="http://code.createjs.com/createjs-2013.12.12.min.js"></script>
-<title>Lon Hosford Basic CreateJS Shape Animation</title>
+<title>CreateJS Shape Animation</title>
 <script>
 		var stage, sunShape;
 		function init()
@@ -17,10 +17,12 @@
 			sunShape.y = 25;
 			stage.addChild(sunShape);
 			//tweening
-			createjs.Tween.get(sunShape, {loop:true})
-					.to({x:525, y:375}, 3000)
-					.wait(2000)
-					.to({x:25, y:25}, 3000);
+
+	//tween loop property restores a sun shape x and y properties and to method is called again..
+			createjs.Tween.get(sunShape, {loop:true})		//the get method stores the properties of the sun shape obj
+					.to({x:525, y:375}, 3000) //to method animates the sun shapes x and y properties to the bottom right of the stage
+					.wait(2000) //wait method causes a delay foring the tween to delay before doing the next action
+					.to({x:25, y:25}, 3000); //moves the sun shape obj back to the top left
 			createjs.Ticker.addEventListener("tick", tickHandler);
 			stage.update();
 		}
