bouncing on trhe first .to call

--- a/BasicAnimation/index.html
+++ b/BasicAnimation/index.html
@@ -20,7 +20,8 @@
 
 	//tween loop property restores a sun shape x and y properties and to method is called again..
 			createjs.Tween.get(sunShape, {loop:true})		//the get method stores the properties of the sun shape obj
-					.to({x:525, y:375}, 3000) //to method animates the sun shapes x and y properties to the bottom right of the stage
+					.to({x:525, y:375}, 3000, createjs.Ease.bounceOut) //to method animates the sun shapes x and y properties to the bottom right of the stage
+							//rase methods are passbed by ref so no parenthese needded
 					.wait(2000) //wait method causes a delay foring the tween to delay before doing the next action
 					.to({x:25, y:25}, 3000); //moves the sun shape obj back to the top left
 			createjs.Ticker.addEventListener("tick", tickHandler);
@@ -30,7 +31,7 @@
 		function tickHandler(e)
 		{
 			stage.update();
-			console.log(createjs.Ticker.getMeasuredFPS());
+			//console.log(createjs.Ticker.getMeasuredFPS());
 		}
 </script>
 <style>
