--- a/BasicAnimation/index.html
+++ b/BasicAnimation/index.html
@@ -54,22 +54,13 @@
 			);
 			titleText.regX = titleText.getMeasuredWidth() / 2;
 			titleText.regY = titleText.getMeasuredHeight() / 2;
-			//titleText.x = stage.canvas.width / 2;
-			titleText.x = -titleText.getMeasuredWidth();
+			titleText.x = stage.canvas.width / 2;
 			titleText.y = stage.canvas.height / 2;
-			//titleText.y = -titleText.getMeasuredHeight();
-			titleText.shadow = new createjs.Shadow("#000", 5, 5, 10);
+			titleText.rotation = 35;
+			titleText.shadow = new createjs.Shadow("#201A66", 5, 5, 20);
+			//titleText.alpha = .5;
+			titleText.outline = true;
 			stage.addChild(titleText);
-			var targetX1 = stage.canvas.width ;
-			var targetX2 = stage.canvas.width / 2;
-			var targetX3 = -titleText.getMeasuredWidth();
-			createjs.Tween.get(titleText, {loop:false})
-					.wait(500)
-					.to({x:targetX1}, 1000, createjs.Ease.backOut)
-					.wait(1100)
-					.to({x:targetX2}, 1000, createjs.Ease.bounceOut)
-					.wait(1450)
-					.to({x:targetX3}, 1000, createjs.Ease.backOut);
 			createjs.Tween.get(sunShape, {loop:true})
 					.to({x:525, y:375}, 3000, createjs.Ease.quintIn)
 					.wait(2000)
