--- a/StageMouseHandling/index.html
+++ b/StageMouseHandling/index.html
@@ -6,52 +6,69 @@
 <title>Stage Mouse Event Handling</title>
 <script>
 var stage;
-function init() {
+function init()
+{
 	stage = new createjs.Stage("stage-canvas");
 
-	var circleShape = new createjs.Shape();
-	circleShape.graphics.beginFill("#00F")
-	circleShape.graphics.drawCircle(0, 0, 100);
-	circleShape.x = stage.canvas.width * .5;
-	circleShape.y = stage.canvas.height * .5;
-	stage.addChild(circleShape);
-
-	var promptText = new createjs.Text("Click and Move Mouse",
-		"bold 48px Arial", "#000");
-	promptText.x = stage.canvas.width * .5
-		- promptText.getMeasuredWidth() / 2;
-	stage.addChild(promptText);
+	rectShape = new createjs.Shape();
+	rectShape.graphics.beginFill("#00F");
+	rectShape.graphics.drawRect(-100, -100, 200, 200);
+	rectShape.graphics.endFill();
+	rectShape.graphics.beginStroke("#F00");
+	rectShape.graphics.setStrokeStyle(25);
+	rectShape.graphics.beginFill("#FF0");
+	rectShape.graphics.drawCircle(0, 0, 87.5);
+	rectShape.graphics.endFill();
+	rectShape.graphics.endStroke();
+	rectShape.graphics.beginFill("#F00");
+	rectShape.graphics.drawCircle(50, 0, 25);
+	rectShape.graphics.endFill();
+	rectShape.x = stage.canvas.width / 2;
+	rectShape.y = stage.canvas.height / 2;
+	stage.addChild(rectShape);
 
 	var messageText = new createjs.Text("...waiting...",
-		"24px Arial", "#000");
+		"22px Arial", "#000");
 	messageText.y = stage.canvas.height
 		- messageText.getMeasuredHeight() - 5;
 	stage.addChild(messageText);
 
-	function eventUpdate(e){ //update stage with position
-				//console.log(e);
-		messageText.text = e.type
-			+ " | x:" + e.stageX
-			+ " y:" + e.stageY;
-		messageText.x = stage.canvas.width * .5
-			- messageText.getMeasuredWidth() / 2;
-		stage.update();
-	}
-//mouse down
-	stage.addEventListener("stagemousedown", function(e){
-				eventUpdate(e);
-	});
-//mouse up
-	stage.addEventListener("stagemouseup", function(e){
-				eventUpdate(e);
-	});
-//mouse move
-	stage.addEventListener("stagemousemove", function(e){
-				eventUpdate(e);
-	});
+	var promptText = new createjs.Text(
+		"Click Hold Left Slow Right Fast",
+		"bold 34px Arial", "#000");
+	promptText.x = stage.canvas.width * .5
+		- promptText.getMeasuredWidth() / 2;
+	stage.addChild(promptText);
 
+	function stageMouseHandler(e){
+		var isPaused = e.type == "stagemouseup";
+		var rotationTo, duration;
+		if ( e.type == "stagemousedown" ){
+			rotationTo = rectShape.rotation
+				+ (rectShape.rotation > 0 ? -360 : 360);
+			duration = stage.canvas.width - e.stageX + 500;
+			messageText.text = "rectShape.rotation: "
+				+  Math.floor(rectShape.rotation)
+				+ " | rotationTo: " +  Math.floor(rotationTo)
+				+ " | duration: " + duration;
+		}
+		createjs.Tween.get(rectShape,
+			{loop:true, paused:isPaused, override:true})
+			.to({rotation:rotationTo}, duration);
+	}
+	stage.addEventListener("stagemousedown", stageMouseHandler);
+	stage.addEventListener("stagemouseup", stageMouseHandler);
+
+	createjs.Ticker.setFPS(60);
+	createjs.Ticker.addEventListener("tick", tickHandler);
 	stage.update();
 }
+function tickHandler(e)
+{
+	stage.update();
+	//console.log(createjs.Ticker.getMeasuredFPS());
+}
+
 </script>
 <style>
 	body {
