--- a/StageMouseHandling/Drag && Drop/index.html
+++ b/StageMouseHandling/Drag && Drop/index.html
@@ -3,67 +3,80 @@
 <head>
 <meta charset="UTF-8">
 <script src="https://code.createjs.com/createjs-2015.05.21.min.js"></script>
-<title>Lon Hosford Basic CreateJS Shape Animation</title>
+<title>Drag && Drop</title>
 <script>
-	var stage;
-	function init() {
-		stage = new createjs.Stage("stage-canvas");
+var stage;
+function init() {
+	stage = new createjs.Stage("stage-canvas");
 
-		var circleShape = new createjs.Shape();
-		circleShape.graphics.beginFill("#F00");
-		circleShape.graphics.drawCircle(0, 0, 50);
-		circleShape.x = 50;
-		circleShape.y = stage.canvas.height - 50;
-		stage.addChild(circleShape);	 // add circle to the stage
+	var isDragging = false;
+	var isTweening = false;
 
-		var messageText = new createjs.Text(
-			"...waiting...",
-			"24px Arial", "#000");
-		messageText.y = stage.canvas.height - messageText.getMeasuredHeight() - 5;
-		stage.addChild(messageText); // add waiting <- bottom left message to the stage.
+	var circleShape = new createjs.Shape();
+	circleShape.graphics.beginFill("#F00");
+	circleShape.graphics.drawCircle(0, 0, 50);
+	circleShape.x = 50;
+	circleShape.y = stage.canvas.height - 50;
+	stage.addChild(circleShape); // add circle to the stage
 
-		var promptText = new createjs.Text(
-			"Start",
-			"bold 30px Arial", "#000");
-		promptText.x = stage.canvas.width * .5 - promptText.getMeasuredWidth() / 2;
-		stage.addChild(promptText); // add start <- prompt to the stage.
+	var messageText = new createjs.Text(
+		"...waiting...",
+		"24px Arial", "#000");
+	messageText.y = stage.canvas.height - messageText.getMeasuredHeight() - 5;
+	stage.addChild(messageText);// add waiting <- bottom left message to the stage.
 
-				messageText.write = function(e){ //the mouse postion
-					this.text = e.type
-						+ " | x:" + Math.floor(e.stageX)
-						+ " y:" + Math.floor(e.stageY);
-					this.x = stage.canvas.width * .5 - this.getMeasuredWidth() / 2;
-				}
+	var promptText = new createjs.Text(
+		"Start",
+		"bold 30px Arial", "#000");
+	promptText.x = stage.canvas.width * .5 - promptText.getMeasuredWidth() / 2;
+	stage.addChild(promptText); // add start <- prompt to the stage.
 
-		 	   stage.mouseMoveOutside = true;
-		       stage.addEventListener("stagemousemove", function(e) { //mouse move listener
-					if (isDragging){ // if mouse is down
-						circleShape.x = e.stageX;
-						circleShape.y = e.stageY;
-					}
-					messageText.write(e); //stagemousemove
-					stage.update();
-				});
-
-		        stage.addEventListener("stagemousedown", function(e) { //mouse down listener
-					if (stage.getObjectUnderPoint(e.stageX, e.stageY)
-						== circleShape){ // if mouse down is on circle
-						isDragging = true;
-					}
-					messageText.write(e);//stagemousedown
-					stage.update();
-				});
-
-		        stage.addEventListener("stagemouseup", function(e) {//mouse up listener
-					isDragging = false; //no longer dragging
-					messageText.write(e); //stagemouseup
-					stage.update();
-				});
-
-				stage.update();
-
-
+	messageText.write = function(e){
+		this.text = e.type
+			+ " | x:" + Math.floor(e.stageX)
+			+ " y:" + Math.floor(e.stageY);
+		this.x = stage.canvas.width * .5 - this.getMeasuredWidth() / 2;	//the mouse postion
 	}
+
+	stage.mouseMoveOutside = true;
+	stage.addEventListener("stagemousemove", function(e) {//mouse move listener
+		if (isDragging){// if mouse is down
+			circleShape.x = e.stageX;
+			circleShape.y = e.stageY;
+		}
+		messageText.write(e);//stagemousemove
+	});
+
+
+
+	stage.addEventListener("stagemousedown", function(e) {	//mouse down listener
+		if (stage.getObjectUnderPoint(e.stageX, e.stageY)
+			== circleShape && !isTweening){	 // if mouse down is on circle
+			isDragging = true;
+		}
+		messageText.write(e);//stagemousedown
+	});
+
+			stage.addEventListener("stagemouseup", function(e) { //mouse up listener
+		if (!isTweening && isDragging){
+			isTweening = true;
+			isDragging = false;
+			var duration = stage.canvas.height - e.stageY + 1000;
+			createjs.Tween.get(circleShape, {override:true})
+				.to({y:stage.canvas.height - 50}, duration, createjs.Ease.bounceOut)
+				.call(function(){isTweening = false;});
+		}
+		messageText.write(e);
+	});
+
+	createjs.Ticker.setFPS(60);
+	createjs.Ticker.addEventListener("tick", tickHandler);
+}
+function tickHandler(e){
+	stage.update();
+	//console.log(createjs.Ticker.getMeasuredFPS());
+}
+
 </script>
 <style>
 	body {
