Added reverse loop to ticker animation
bouncing from side to side.

--- a/StageMouseHandling/Ticker Animation/index.html
+++ b/StageMouseHandling/Ticker Animation/index.html
@@ -5,7 +5,8 @@
 <script src="http://code.createjs.com/createjs-2013.12.12.min.js"></script>
 <title>Ticker Animation</title>
 <script>
-var stage, circleShape, messageText;
+var stage, circleShape, messageText, velocity;
+//bouce from side to side...
 function init(){
 	stage = new createjs.Stage("stage-canvas");
 
@@ -13,6 +14,8 @@ function init(){
 		"...waiting...", "24px Arial", "#000");
 	messageText.y = stage.canvas.height - messageText.getMeasuredHeight() - 5;
 	stage.addChild(messageText);
+
+	velocity = 2;
 
 	circleShape = new createjs.Shape();
 	circleShape.graphics.beginFill("#000");
@@ -31,12 +34,16 @@ function init(){
 	createjs.Ticker.setFPS(60);
 	createjs.Ticker.addEventListener("tick", tickHandler);
 }
-function tickHandler(e){ // ticker class
-	if (circleShape.x < stage.canvas.width - 50){
-		circleShape.x += 4; //move circle along x-axis
-		messageText.text = "Ticks: " + createjs.Ticker.getTicks()
-			+ " Time: " + Math.floor(createjs.Ticker.getTime());
+
+function tickHandler(e){// ticker class
+	if (circleShape.x + velocity > stage.canvas.width - 50
+		|| circleShape.x + velocity < 50){
+		velocity *= -1;
 	}
+	circleShape.x += velocity;	 //move circle along x-axis
+	messageText.text = "Ticks:" + createjs.Ticker.getTicks()
+		+ " Time:" + Math.floor(createjs.Ticker.getTime())
+		+ " Velocity:" + velocity;
 	stage.update();
 }
 </script>
