--- a/Positioning && Tweening/index.html
+++ b/Positioning && Tweening/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <script src="http://code.createjs.com/createjs-2013.12.12.min.js"></script>
 <script src="assets/grid.js"></script>
-<title>Lon Hosford Basic CreateJS Shape Animation</title>
+<title>Positioning and Tweening</title>
 <script>
 /**
 		Positioning and Tweening with Shape Drawing Methods
